            - Vertex<3>::LinkType has been renamed to Vertex<3>::Link, and is
              now a scoped enumeration for better type safety.  The old enum
              constants (e.g., Vertex<3>::SPHERE) have been renamed as scoped
              enum values (e.g., Vertex<3>::Link::Sphere).  The old names have
              been kept as deprecated compile-time class constants of Vertex<3>.
        Function columnEchelonForm():
            - Cleaned up and relaxed the preconditions.
            - Now checks its preconditions and throws an exception if they fail.
        Function foreach_constexpr():
            - New pair of functions to provide compile-time loops over an
              arbitrary set of integers.
        Function gcdWithCoeffs():
            - Fixed an overflow error that occurred in the case b == LONG_MAX
              (and nowhere else), and highlighted in the docs that LONG_MIN
              may not be handled correctly (due to the inability to negate).
        Function modularInverse():
            - Now checks its preconditions and throws an exception if they fail.
            - Now explicitly allows (n,k) = (1,0); in the past this was
              supported but technically a violation of the preconditions.
            - Now takes arguments of type long (not unsigned long).
        Function preImageOfLattice():
            - Now checks some of its preconditions and throws an exception
              if they fail.
        Function reducedMod():
            - Now checks its preconditions and throws an exception if they fail.
        Function rowBasisAndOrthComp():
            - Now checks its preconditions and throws an exception if they fail.
        Functions simpler(), simplerThreeWay():
            - The old simpler() functions that compare 2x2 matrices are now
              deprecated (both the 2-argument and the 4-argument variants).
            - To replace them, there are new simplerThreeWay() functions that