@@ -1,0 +1,71 @@
+# Regina - A Normal Surface Theory Calculator
+# Python Test Suite Component
+#
+# Copyright (c) 2007-2023, Ben Burton
+# For further details contact Ben Burton (bab@debian.org).
+#
+# Provides tests for binomial coefficients.
+#
+# This file is a single component of Regina's python test suite.  To run
+# the python test suite, move to the main python directory in the source
+# tree and run "make check".
+#
+# This program is free software; you can redistribute it and/or
+# modify it under the terms of the GNU General Public License as
+# published by the Free Software Foundation; either version 2 of the
+# License, or (at your option) any later version.
+#
+# As an exception, when this program is distributed through (i) the
+# App Store by Apple Inc.; (ii) the Mac App Store by Apple Inc.; or
+# (iii) Google Play by Google Inc., then that store may impose any
+# digital rights management, device limits and/or redistribution
+# restrictions that are required by its terms of service.
+#
+# This program is distributed in the hope that it will be useful, but
+# WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+# General Public License for more details.
+#
+# You should have received a copy of the GNU General Public
+# License along with this program; if not, write to the Free
+# Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston,
+# MA 02110-1301, USA.
+
+# Ensure that we are using 64-bit integers, even on a 32-bit platform.
+print(binomMedium(29, 14))
+print(binomMedium(29, 15))
+print(binomMedium(61, 30))
+print(binomMedium(61, 31))
+
+# Check what happens when arguments are out of range.
+print(binomMedium(0, 0))
+print(binomMedium(10, -1))
+print(binomMedium(10, 0))
+print(binomMedium(10, 10))
+print(binomMedium(10, 11))
+
+try:
+	print(binomMedium(-1, 0))
+except:
+	print("Exception caught")
+
+try:
+	print(binomMedium(62, 0))
+except:
+	print("Exception caught")
+
+try:
+	print(binomMedium(62, 62))
+except:
+	print("Exception caught")
+
+try:
+	print(binomMedium(62, -1))
+except:
+	print("Exception caught")
+
+try:
+	print(binomMedium(62, 63))
+except:
+	print("Exception caught")
+
